--- a/Readme
+++ b/Readme
@@ -32,7 +32,7 @@ Esta plataforma visa facilitar a conexão entre a ONG e pessoas dispostas a ajud
 
 - HTML5
 - CSS3
-- JavaScript (Vanilla JS)
+- JavaScript 
 - API pública de CEP (ViaCEP)
 
 ---
